# cpp_modules

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.github/workflows/: build.yml  vs_env.bat
build_rules/: cpp_modules-config.cmake  cpp_modules.cs  cpp_modules.props  cpp_modules.targets  cpp_modules.xml
src/: CMakeLists.txt
src/scanner/: CMakeLists.txt  default_comparisons.h  depinfo.h  depinfo_cs.h  dll_main.cpp  file_time.cpp  file_time.h  gen_ninja.cpp  gen_ninja.h  lmdb_path_store.h  lmdb_store.h  lmdb_string_store.h  lmdb_wrapper.h  lmdb_wrapper_impl.h  module_cmdgen.cpp  module_cmdgen.h  multi_buffer.h  nl_json_depinfo.h  nl_json_schema.h  scanner.cpp  scanner.h  span.hpp  strong_id.h  tool_main.cpp  trace.h  wrapper_cs.cpp
src/test/: CMakeLists.txt  catch2.runsettings  depinfo.cpp  gen_ninja.cpp  lmdb.cpp  main.cpp  msbuild.cpp  scanner_test.cpp  system_test.cpp  system_test.h  temp_file_test.h  test_config.h  util.cpp  util.h
src/utils/: CMakeLists.txt  cmd_line_utils.cpp  cmd_line_utils.h
tests/: full_clean_one.bat  run_one.bat  test_all.bat
tests/concurrent/: A.cpp  B1.cpp  B2.cpp  B3.cpp  B4.cpp  B5.cpp  B6.cpp  B7.cpp  B8.cpp  C.cpp  CMakeLists.txt  H6.h  funcsig.h
tests/dag/: A1.cpp  A2.cpp  A3.cpp  A4.cpp  B1.cpp  B2.cpp  B3.cpp  B4.cpp  C1.cpp  C2.cpp  C3.cpp  C4.cpp  C5.h  CMakeLists.txt  D1.cpp  D2.cpp  D3.cpp  D4.cpp  D5.h  D6.h  D6.hxx  std_core.cpp
tests/header_units/: A.cpp  A.hpp  B.cpp  B.hpp  C.h  C.hpp  C.m.cpp  CMakeLists.txt  D.h  D.m.cpp  D1.hpp  E.hpp  F.cpp  F.hpp
tests/iostream/: CMakeLists.txt  benchmark.sh  iostream.cpp  template.cpp
